<resources>
    <string name="app_name">Beer Catalogue</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="app_description">
        "Beer catalogue app.\n\n"

        "Search for your favourite beer.\n\n"
    </string>

    <string name="logo_image">logo image</string>
    <string name="icon_button">icon_button</string>

    <string name="log_in">LOG IN</string>
    <string name="register">REGISTER</string>

    <string name="register_text">Don\'t have an account?</string>
    <string name="register_button"><u>Register</u></string>

    <string name="login_text">Already have an account?</string>
    <string name="login_button"><u>Log in</u></string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="birthdate">Birthdate</string>
    <string name="photo">Photo</string>
    <string name="password">Password</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_beerlist">Beer list</string>
    <string name="menu_about">About</string>

    <string name="user_name">Name:</string>
    <string name="user_email">Email:</string>
    <string name="beer_rating_text">Rating:</string>
    <string name="search_title">Looking for a specific beer?</string>
    <string name="search">Search</string>
    <string name="reviews_none">No reviews yet.</string>
    <string name="reviews_all">Users\' reviews</string>
    <string name="reviews_user">Your reviews</string>

</resources>