<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_about">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.blaj.beercatalogue.accounts.ui.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_beerlist"
        android:name="com.blaj.beercatalogue.beerlist.ui.BeerlistFragment"
        android:label="@string/menu_beerlist"
        tools:layout="@layout/fragment_beerlist" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.blaj.beercatalogue.about.ui.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>